Fix restart butto overflow

--- a/mdn_games/number-guess2/css/styles.css
+++ b/mdn_games/number-guess2/css/styles.css
@@ -175,7 +175,6 @@ main {
    display: flex;
    flex-direction: column;
    gap: 5px;
-   padding: 10px;
 }
 
 .bottom-features {
@@ -220,9 +219,11 @@ main {
 .gameStatesEl {
    display: flex;
    flex-direction: column;
+   height: 150px;
    gap: 5px;
    margin-top: 5px;
    color: #CCCCCC;
+   position: relative;
 }
 
 .restartButtonEl {
@@ -232,8 +233,10 @@ main {
    background-color: orangered;
    border-radius: 5px;
    color: #FFFFFF;
-   margin-right: -6px;
-   margin-top: -6px;
+   position: absolute;
+   bottom: 3px;
+   right: 0;
+   font-weight: 500;
 }
 
 .gameStatesEl p {
